--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-  
 .App {
   text-align: center;
 }
@@ -42,4 +41,14 @@
 
 img {
   object-fit: cover;
+}
+
+.score-info {
+  margin: 50px;
+}
+
+#grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
 }
